@@ -298,6 +298,7 @@ class MainProgram(object):
 
             # optional string entries
             if 'keywords' in self.data and self.data['keywords']:
+                # XXX shoud use comma to separate, not space
                 fp.write(u'keywords = %s\n' % ' '.join(self.data['keywords']))
             for name in ('home_page', 'author', 'author_email',
                          'maintainer', 'maintainer_email', 'description-file'):
@@ -318,17 +319,30 @@ class MainProgram(object):
                 fp.write(u'%s = ' % name)
                 fp.write(u''.join('    %s\n' % val
                                  for val in self.data[name]).lstrip())
+
             fp.write(u'\n[files]\n')
-            for name in ('packages', 'modules', 'scripts',
-                         'package_data', 'extra_files'):
+
+            for name in ('packages', 'modules', 'scripts', 'extra_files'):
                 if not(name in self.data and self.data[name]):
                     continue
                 fp.write(u'%s = %s\n'
                          % (name, u'\n    '.join(self.data[name]).strip()))
-            fp.write(u'\nresources =\n')
-            for src, dest in self.data['resources']:
-                fp.write(u'    %s = %s\n' % (src, dest))
-            fp.write(u'\n')
+
+            if self.data.get('package_data'):
+                fp.write(u'package_data =\n')
+                for pkg, spec in sorted(self.data['package_data'].items()):
+                    # put one spec per line, indented under the package name
+                    indent = u' ' * (len(pkg) + 7)
+                    spec = (u'\n' + indent).join(spec)
+                    fp.write(u'    %s = %s\n' % (pkg, spec))
+                fp.write(u'\n')
+
+            if self.data.get('resources'):
+                fp.write(u'resources =\n')
+                for src, dest in self.data['resources']:
+                    fp.write(u'    %s = %s\n' % (src, dest))
+                fp.write(u'\n')
+
         finally:
             fp.close()
 
@@ -400,14 +414,8 @@ class MainProgram(object):
                                  for src in srcs]
                         data['resources'].extend(files)
 
-            # 2.2 package_data -> extra_files
-            package_dirs = dist.package_dir or {}
-            for package, extras in dist.package_data.items() or []:
-                package_dir = package_dirs.get(package, package)
-                for file_ in extras:
-                    if package_dir:
-                        file_ = package_dir + '/' + file_
-                    data['extra_files'].append(file_)
+            # 2.2 package_data
+            data['package_data'] = dist.package_data.copy()
 
             # Use README file if its content is the desciption
             if "description" in data:
